--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 <body>
 <!-- Navbar qismi -->
 <nav class="navbar">
-    <a href="/" class="navbar__logo">SASS</a>
+    <a href="#" class="navbar__logo">SASS</a>
     <div class="navbar__bars"><i class="fas fa-bars"></i></div>
     <div class="navbar__menu">
-        <a href="/" class="navbar__menu--links">Asosiy sahifa</a>
-        <a href="/" class="navbar__menu--links">Mahsulotlar</a>
-        <a href="/" class="navbar__menu--links">Xizmatlar</a>
-        <a href="/" class="navbar__menu--links" id="button">A'zo bo'lish</a>
+        <a href="#" class="navbar__menu--links">Asosiy sahifa</a>
+        <a href="#" class="navbar__menu--links">Mahsulotlar</a>
+        <a href="#" class="navbar__menu--links">Xizmatlar</a>
+        <a href="#" class="navbar__menu--links" id="button">A'zo bo'lish</a>
     </div>
 </nav>
 
