--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h1>Ular kelishyapti...</h1>
             <h2>Tayyor bo'ling!</h2>
             <p>Ro'yxatga qo'shilish uchun a'zo bo'ling.</p>
-            <button class="asos__container--btn"><a href="/">A'zo bo'lish</a></button>
+            <button class="asos__container--btn"><a href="#">A'zo bo'lish</a></button>
         </div>
         <div class="asos__container--right">
             <img src="./image/img-2.svg" alt="O'zga sayyoralik" class="asos__container--img">
